/**  *  *  3、-Xms10m -Xmx10m -XX:+PrintGCDetails -XX:+PrintCommandLineFlags -XX:+UseParallelGC         （PSYoungGen + ParOldGen）  *  *      -XX:InitialHeapSize=10485760 -XX:MaxHeapSize=10485760 -XX:+PrintCommandLineFlags -XX:+PrintGCDetails -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:-UseLargePagesIndividualAllocation -XX:+UseParallelGC  *      [GC (Allocation Failure) [PSYoungGen: 2048K->504K(2560K)] 2048K->948K(9728K), 0.0007253 secs] [Times: user=0.00 sys=0.00, real=0.00 secs]  *      *********************GCDemo hello  *      [GC (Allocation Failure) [PSYoungGen: 2482K->504K(2560K)] 2926K->1164K(9728K), 0.0007802 secs] [Times: user=0.00 sys=0.00, real=0.00 secs]  *      [Full GC (Allocation Failure) [PSYoungGen: 0K->0K(2048K)] [ParOldGen: 4837K->4818K(7168K)] 4837K->4818K(9216K), [Metaspace: 3262K->3262K(1056768K)], 0.0064198 secs] [Times: user=0.02 sys=0.00, real=0.01 secs]  *      Heap  *      PSYoungGen      total 2048K, used 57K [0x00000000ffd00000, 0x0000000100000000, 0x0000000100000000)  *          eden space 1024K, 5% used [0x00000000ffd00000,0x00000000ffd0e698,0x00000000ffe00000)  *          from space 1024K, 0% used [0x00000000ffe00000,0x00000000ffe00000,0x00000000fff00000)  *          to   space 1024K, 0% used [0x00000000fff00000,0x00000000fff00000,0x0000000100000000)  *      ParOldGen       total 7168K, used 4818K [0x00000000ff600000, 0x00000000ffd00000, 0x00000000ffd00000)  *          object space 7168K, 67% used [0x00000000ff600000,0x00000000ffab48a0,0x00000000ffd00000)  *      Metaspace       used 3293K, capacity 4496K, committed 4864K, reserved 1056768K  *          class space    used 354K, capacity 388K, committed 512K, reserved 1048576K  *  */